2008-01-06  Martin Rudalics  <rudalics@gmx.at>

	* cus-edit.el (custom-tool-bar-map): Move initialization of this
	keymap from here ...
	(custom-mode): ... to here.  Reported by Reiner Steib.

2008-01-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* obsolete/x-apollo.el: Remove file for unsupported system.

	* term/x-win.el (vendor-specific-keysyms): Remove reference to
	Apollo.

	* progmodes/gud.el (gud-dgux-p): Remove.
	(dbx): Remove reference to dgux.

	* progmodes/ps-mode.el (ps-mode-print-function):
	* ps-print.el (ps-lp-system):
	* paths.el (rmail-spool-directory):
	* ls-lisp.el (ls-lisp-emulation):
	* lpr.el (lpr-lp-system):
	* dired.el (dired-chown-program): Remove references to dgux.

2008-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-process-sentinel): Fix apparent typo.
	(vc-do-command): Forcefully kill any left over process.
	Use start-file-process.
	(vc-annotate-get-time-set-line-props): Check we don't move backward.

2008-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-list-hash-table)
	(dbus-name-owner-changed-handler): Replace "signal" by "member".
	(dbus-check-event): Add serial number to event.
	(dbus-handle-event): Apply return message if needed.
	(dbus-event-serial-number): New defun.
	(dbus-event-service-name, dbus-event-path-name)
	(dbus-event-interface-name, dbus-event-member-name):
	Adapt implementation to serial number.

2008-01-04  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs--get-mode-name): Fix typo in previous change.

2008-01-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* mouse.el (mouse-popup-menubar): Fix typo.

	* emacs-lisp/bytecomp.el (byte-compile-from-buffer): Move one more
	form inside with-current-buffer.

	* progmodes/antlr-mode.el (provide): Move to the end of file.
	(require): Don't require font-lock and compile.
	(outline-level, imenu-use-markers, imenu-create-index-function):
	Move declarations to top level.
	(cond-emacs-xemacs-macfn): Declare for compiler.
