@@ -1,3 +1,13 @@
+2008-01-06  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el (vc-status-fileinfo): New defstruct.
+	(vc-status): New defvar
+	(vc-status-insert-headers, vc-status-printer, vc-status)
+	(vc-status-mode-map, vc-status-mode, vc-status-mark-file)
+	(vc-status-unmark-file, vc-status-marked-files): New functions.
+
+	* vc-hg.el (vc-hg-dir-status): New function.
+
 2008-01-06  Martin Rudalics  <rudalics@gmx.at>
 
 	* cus-edit.el (custom-tool-bar-map): Move initialization of this
